--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,18 @@ jobs:
       
     - name: Build
       run: npm run build
+
+    # 🔹 Thêm bước debug dist
+    - name: List dist folder
+      run: |
+        echo "Listing dist folder content:"
+        ls -R dist
+
+    # 🔹 Thêm bước hiển thị sample asset URL
+    - name: Show sample asset URLs
+      run: |
+        echo "Sample asset URL:"
+        echo "https://$GITHUB_REPOSITORY.github.io/DungeonCard/assets/images/cards/character/nahida.webp"
       
     - name: Setup Pages
       uses: actions/configure-pages@v4
